--- a/index.html
+++ b/index.html
@@ -43,6 +43,61 @@
             <span class="visually-hidden">Next</span>
            </button>
         </div>
+        <div class="container pt-5">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100 shadow">
+                        <img src="img/indplan.png" class="card-img-top" alt="Individual Plan">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Individual 
+                            </h5>
+                            <p class="card-text">
+                                The perfect plan for just you. Get all the fresh fruit and vegetables you need without the waste.
+                            </p>
+                            <a href="#" class="btn btn-success">Buy</a>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted"></small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 shadow">
+                        <img src="img/FamilyPlan.png" class="card-img-top" alt="Family Plan">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                               Family Plan 
+                            </h5>
+                            <p class="card-text">
+                                The perfect plan for your family. Bring the freshest fruits and vegetables to your whole family.
+                            </p>
+                            <a href="#" class="btn btn-success">Buy</a>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted"></small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 shadow">
+                        <img src="img/armyplan.png" class="card-img-top" alt="Army Plan">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Army Plan
+                            </h5>
+                            <p class="card-text">
+                                The perfect plan for veterans. 
+                            </p>
+                            <a href="#" class="btn btn-success">Buy</a>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted"></small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
 
     <!-- Bootstrap JS -->
